# pytcpdump-gtp-extractor

./: .gitignore  README.md  main.py  pyproject.toml  pytcpdump-gtp-extractor.py
