[tool.poetry]
name = "pytcpdump-gtp-extractor"
version = "0.1.0"
description = "Simple version of tcpdump developed using Python and scapy that enable the extraction of GPT-U tunnel encapsulation"
authors = ["Alex Carrega <alessandro.carrega@unige.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.6.1"
clize = "^5.0.2"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
