[project]
name = "pytcpdump-gtp-extractor"
version = "0.1.0"
description = "Simple version of tcpdump developed using Python and scapy that enable the extraction of GPT-U tunnel encapsulation"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "scapy~=2.6.1",
    "clize~=5.0.2",
    "loguru~=0.7.3"
]
